--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'checkstyle'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 checkstyle {
@@ -13,6 +14,10 @@ checkstyle {
 
 repositories {
     mavenCentral()
+}
+
+application {
+    mainClass.set("Launcher")
 }
 
 dependencies {
