Refactor code for level 10

--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,8 @@ application {
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "Groot ChatBot"
+    archiveVersion = "V0.1"
     archiveClassifier = null
 }
 
