--- a/build.gradle
+++ b/build.gradle
@@ -64,8 +64,9 @@ shadowJar {
     archiveClassifier = null
 }
 
-run{
+run {
     standardInput = System.in
+    enableAssertions = true
 }
 
 jar {
