Add JUnit tests for Task, TaskList, and Parser
Existing TodoTest and TaskListTest were limited. Parser was untested.
Improving coverage reduces regressions and documents expected behavior.

Add tests for:
* Task (via TodoTest): addTag, removeTag, hasTag, serialization with tags
* TaskList: findTask (case-insensitive), findTaskByTag
* Parser (ParserTest): all command types and error paths

Tests follow package-matching convention for package-private access.

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 application {
-    mainClass.set("Launcher")
+    mainClass.set("groot.Launcher")
 }
 
 dependencies {
@@ -55,7 +55,7 @@ test {
 }
 
 application {
-    mainClass.set("groot.Groot")
+    mainClass.set("groot.Launcher")
 }
 
 shadowJar {
@@ -72,7 +72,7 @@ run {
 jar {
     manifest {
         attributes(
-            'Main-Class': 'groot.Groot'
+            'Main-Class': 'groot.Launcher'
         )
     }
 }
