--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,12 @@ run {
     enableAssertions = true
 }
 
+task runText(type: JavaExec) {
+    mainClass = 'groot.TextLauncher'
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+}
+
 jar {
     manifest {
         attributes(
